get unrelated deleted

--- a/neuro_component_pick/jax_speedup_MZI_NN_xor_listbase_8bit0pad2layer_doubleonly_epoch500_3min.ipynb
+++ b/neuro_component_pick/jax_speedup_MZI_NN_xor_listbase_8bit0pad2layer_doubleonly_epoch500_3min.ipynb
@@ -14,6 +14,7 @@
     "from jax import grad, jit, vmap, value_and_grad\n",
     "from jax import jvp, vjp\n",
     "from jax import random\n",
+    "\n",
     "import jax\n",
     "from functools import partial\n",
     "from jax.ops import index_update, index\n",
@@ -114,6 +115,7 @@
    "outputs": [],
    "source": [
     "def ABCD(r, a, phi):\n",
+    "    # so now there is a splitter\n",
     "    k = jnp.sqrt(1-r**2)\n",
     "    A = -jnp.sqrt(a)/1j/k * jnp.exp(1j*phi/2)\n",
     "    B = r*jnp.sqrt(a)/1j/k * jnp.exp(1j*phi/2)\n",
@@ -147,27 +149,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def clements(phi_list, xin):\n",
-    "#     count_mzi = 0\n",
-    "#     xout = xin\n",
-    "#     for layer in range(depths):\n",
-    "#         T = jnp.eye(ports, dtype=CTYPE)\n",
-    "        \n",
-    "#         for ind_mzi in range(len(pairs[layer])):\n",
-    "#             # this process makes things slower => change\n",
-    "#             T11, T12, T21, T22 = doublering(phi_list[count_mzi])\n",
-    "#             m, n = pairs[layer][ind_mzi]\n",
-    "#             # index_update is kinda slow\n",
-    "#             T = index_update(T, index[m, m], T11)\n",
-    "#             T = index_update(T, index[m, n], T12)\n",
-    "#             T = index_update(T, index[n, m], T21)\n",
-    "#             T = index_update(T, index[n, n], T22)\n",
-    "#             count_mzi += 1\n",
-    "#             # print(f'clements{count_mzi}', jnp.abs(T11), jnp.abs(T21))\n",
-    "#             # print(f'xpass{count_mzi}', jnp.round(jnp.abs(jnp.dot(T, xout))**2, 2))\n",
-    "#         xout = jnp.dot(T, xout)\n",
-    "#     return xout\n",
-    "\n",
     "def clements(phi_list, xin):\n",
     "    count_mzi = 0\n",
     "    xout = xin\n",
@@ -179,11 +160,6 @@
     "            # this process makes things slower => change\n",
     "            T11, T12, T21, T22 = doublering(phi_list[count_mzi])\n",
     "            m, n = pairs[layer][ind_mzi]\n",
-    "            # index_update is kinda slow\n",
-    "#             T = index_update(T, index[m, m], T11)\n",
-    "#             T = index_update(T, index[m, n], T12)\n",
-    "#             T = index_update(T, index[n, m], T21)\n",
-    "#             T = index_update(T, index[n, n], T22)\n",
     "            T[m][m] = T11\n",
     "            T[m][n] = T12\n",
     "            T[n][m] = T21\n",
